Thu Mar 31 22:23:51 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (SRC_EXT): exclude just case different suffixes on case
	  insensitive file system platforms.

	* README.EXT, README.EXT.ja (Appendix C): utility functions.

Thu Mar 31 14:08:43 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_engine.c (ossl_engine_s_load): should return
	  value. [ruby-dev:25971]

Thu Mar 31 11:07:50 2005  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/parser.rb: @@setter -> @@setters.

	* lib/rss/parser.rb
	  (RSS::BaseListener.register_uri)
	  (RSS::BaseListener.uri_registered?)
	  (RSS::BaseListener.install_get_text_element):
	  swapped the first argument and the second argument.

	* lib/rss/taxonomy.rb: swapped the first argument and the second
	  argument for RSS::BaseListener.install_get_text_element.
	* lib/rss/image.rb: ditto.
	* lib/rss/syndication.rb: ditto.
	* lib/rss/dublincore.rb: ditto.
	* lib/rss/parser.rb: ditto.
	* lib/rss/1.0.rb: ditto.
	* lib/rss/2.0.rb: ditto.
	* lib/rss/0.9.rb: ditto.
	* lib/rss/content.rb: ditto.

Thu Mar 31 11:00:36 2005  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/parser.rb
	  (RSS::BaseListener.install_setter)
	  (RSS::BaseListener.register_uri): changed fallback way.

Thu Mar 31 08:25:40 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (RUBYOPT): clear for the environment RubyGems installed.

	* common.mk (clean-local): keep $(PREP) files till distclean.

	* common.mk (check): do all tests.

Thu Mar 31 06:00:20 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_engine.c (ossl_engine_s_load): should not raise
	  error even if the specified engine could not be loaded. (Dynamic
	  engines don't have fixed name to load.)

Wed Mar 30 17:41:48 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c: add TclTkIp#_create_console() method to create
	  a Tcl/Tk's console window.

	* ext/tk/lib/multi-tk.rb: support TclTkIp#_create_console() method.

	* ext/tk/lib/remote-tk.rb: ditto.
